--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,7 @@ markdown: kramdown
 permalink: /:title:output_ext
 
 collections:
-  components:
-    output: true
   recipes:
     output: true
 
-exclude: ['Gemfile', 'Gemfile.lock', 'Rakefile', 'README.md']
+exclude: ["Gemfile", "Gemfile.lock", "Rakefile", "README.md"]
